nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-task
  labels:
    apps: website
spec:
  replicas: 3
  selector:
    matchLabels:
      apps: website
  template:
    metadata:
      labels:
        apps: website
    spec:
      containers:
      - name: nginx     
        image: nginx:1.7
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-vol
        persistentVolumeClaim:
          claimName: web-pvc
