nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-task-svc
spec:
  selector:
    apps: website
  type: NodePort
  ports:
  - targetPort: 80
    port: 80
    nodePort: 30080
