nginx-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-task-np
spec:
  podSelector:
    matchLabels:
      apps: website
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - port: 80
